remoção de opções ligadas ao sistema de modulos do java